--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     </div>
                                     <h4>Profile Generator</h4>
                                     <p>A Node.js app that generates profiles using Jest, Inquierer, and Javascript</p>
-                                    <img class="image" src="https://courses.bootcampspot.com/courses/809/files/1220307/preview" alt="Profile Generator">
+                                    <img class="image" src="https://lh3.googleusercontent.com/TWyYuzSi5XSg_LEtJdiFmjjmnxbOaXmEM04GmjhXr6N_nWUl-GtKOzBH6_U44AI9DAR63xhpRP9Gm044CqV05oPQq7PIPLHsLRYLKGIcgW1k0ieL0HUNZib2mmlBs91yRhneJHm2oGZzOFYdl2cPlSIH5112op9Id7buzi8O_vJlhkj3dnfV3lI733ttbW4i1LfIrq5pQCYynTh56YfiasAddXC7SMG7N4laK-hn3-BV_oQrf71bXLW0_Jh7WNnX16E0_95T7TEbqA1gRHVnVjlJA0-w2itpOHzZIcqTZKPI1r9ggY-C0335REuJktv9l_A6uyofw_bJnTe6iqRK0mI6k-AOotcBOO_Is2EtixuumjY7N-0c2h01OUvM9RSKTyqPcchh-v2liKyyViFTiu0w7cKU5kwDncBTyhU1kqJx-8K9WO8BKPTuUAQu21VS4OdQgoRQ0JhPZHq9n2iG1n5L7ITzIZjaFtUINa1p7cYmbdHt0AJKz3b_1eXOrvzVTJPES2gQ2K89HvYHxic2hbE6thEebca42ixsN-9OHHqO3brZdygBJjn6bOzPnuVm6nmBMR1Fl-cVJe_BmNmdsOGnzHWXthJzuHs3Cy3S7GqPz51ziFb-MmPQDdhmQNNCra6MebHB5nJ66EAsTIqcwbzKnyF0KjP2cd6pNOOv6Z1fWJHvVErKb1DHDiC4ysjnc6b1ACsdETQ0LKiOEmpfKog=w1200-h961-no?authuser=0" alt="Profile Generator">
                                 </div>
                                 <div class="shadow rounded feature-item p-4 mb-4 aos-init" data-aos="fade-up">
                                     <div class="my-4">
@@ -127,7 +127,7 @@
                                     <p>A simple browser coding quiz built with HTML, CSS, and Javascript
 
                                     </p>
-                                    <img class="image" src="https://courses.bootcampspot.com/courses/809/files/1220214/preview" alt="Test being taken">
+                                    <img class="image" src="https://lh3.googleusercontent.com/fyBqVwyWSoW96iY-_P3JL8V0Sldck23RWdF8LlwI7wjERrDfjhw2g7UVVzqcrKIw-m2eeaOtNJrTMBJ4N8C6pLWaUW_tLaJhgIFN7AzZRrKszhGYK1GH3ez_giSmAt2NoyIcy127DC1BKSYbiXx-bGWvlXmxOY09ZU9d9UE2T6aokVaUYwEWhIwbE2otuxp9faqmXFcshpIvB2PtKm6ewPIrl-GW4Ilaa6JtSJgaHHWMyambBZ9-qmAWT0bKsi683DObytjY-Dty8RiF07_AWRT0tTaRUZEfxpl0KFZPp1i54uaSO1ZbPU4Wsrl4oRpunM1ly6zj0gGxeKEDtyZEIs6KoVyBXfQUkWjakhLcW_4636ZKxT98UDDw6d7oCwlAab_ARYBz54iC6nibNqupdPv9wZF4HOBM8pn4t-nKaPeijoNjhJ3Ex-Vx-Sng-xzQzFSNBimh1sBifukI05w6xiAVdUy57OdIW8zbVO273QKW0t2UtFeh4M3Rw9nbxHFZ1hMvwUr5eaEBtGTFybakytydWA9DE-3pXETswAukBUbuH28tHeIdgisHzWu1KdWQZBbEz1ldQ9KdpqN4dV3AUrF9yEPy0T2_FlUfzlAkevfvd0lQyOIXdfSmyszfJ--j9sI3lmDESvrW_jafwOvb3C31oUb3dMAJKdeYWLjmIJT1XkHqvolzLXOC7S8pTsJemQqOIHKEbaGugpthmTTi1X0=w2217-h1290-no?authuser=0" alt="Test being taken">
                                 </div>
                             </div>
                             <!-- End of Feature Item -->
