--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     </div>
                                     <h4>Weather Application</h4>
                                     <p>A realtime weather application using API's built with HTML, CSS, and Javascript</p>
-                                    <img class="image" src="https://camo.githubusercontent.com/1a3f903812d4dc2d76a3308a7c4738d2c9791b0e4b886303ff3af089028fd0e4/68747470733a2f2f692e696d6775722e636f6d2f495569394966382e706e67" alt="Weather Dashboard">
+                                    <img class="image" src="https://lh3.googleusercontent.com/nZvI3ER9pjDvsITfIo_5IzTfQ1wkzr6IhBJWBB0MJ8SXn7sDFv280ZDUcQrS2t3cYIu1eaYfBilhadmQ9FE98nPYZGEvVFmQvnFrwPTfdIexCP1gDnTsEhzOlCk398hqbsMKwWwMdjZMFXiy_0ymU193ZAEmjWOA51xXnc1cqSiMjEJWGudXw1_t7R2N6P5BpjXOVpQWt7j9UufGilK8ZfsnwaOjhMuoOiB4cEBz5TTSw0FyaDVI0X5Q55HP9szKmmaEzikfFWW-vEc4-oguQBe6INRahTg9nv3T6yJ5gGxjTHTwJUAayJJJSElkLhGUcuHeiCw53RFsO6cSZ93BbfGqEct-jOC2lPX2Ot8LD7EmkShh19Fllo-l7YMaIxuwSJSj6EqIE4FYYc8zohTq0xMD82eGjBg3FsF-VSBPileBexkkl9eNT-fMmliXwtlLelOA__vCVbhNjIe29nr3ziTNLgBL10wfzddE5f1ttd6ntdpVbKTHEzycRlFIyZfKDwUtmImo04x0sE1TlkEfc_3-a6F9EEPIlfRPOojIKg3plIqL5jfx3_9uxMpoosJvD_4KDZg3lmeu0zFCybmQSfIuDuDT53oqdNisKO-wshJrvav9tjrEQxNPnTX-yDuaiEz0q9g9ZwL9tYDjXY-gZf060KbVq27xtQzk-I27yz8-QOzKQphHymsalj1uL-CWEJ73IpEwbt20wd-hL8xU9YQ=w2159-h1290-no?authuser=0" alt="Weather Dashboard">
                                 </div>
                             </div>
                             <!-- End of Feature Item -->
@@ -97,7 +97,7 @@
                                     </div>
                                     <h4>Profile Generator</h4>
                                     <p>A Node.js app that generates profiles using Jest, Inquierer, and Javascript</p>
-                                    <img class="image" src="https://lh3.googleusercontent.com/TWyYuzSi5XSg_LEtJdiFmjjmnxbOaXmEM04GmjhXr6N_nWUl-GtKOzBH6_U44AI9DAR63xhpRP9Gm044CqV05oPQq7PIPLHsLRYLKGIcgW1k0ieL0HUNZib2mmlBs91yRhneJHm2oGZzOFYdl2cPlSIH5112op9Id7buzi8O_vJlhkj3dnfV3lI733ttbW4i1LfIrq5pQCYynTh56YfiasAddXC7SMG7N4laK-hn3-BV_oQrf71bXLW0_Jh7WNnX16E0_95T7TEbqA1gRHVnVjlJA0-w2itpOHzZIcqTZKPI1r9ggY-C0335REuJktv9l_A6uyofw_bJnTe6iqRK0mI6k-AOotcBOO_Is2EtixuumjY7N-0c2h01OUvM9RSKTyqPcchh-v2liKyyViFTiu0w7cKU5kwDncBTyhU1kqJx-8K9WO8BKPTuUAQu21VS4OdQgoRQ0JhPZHq9n2iG1n5L7ITzIZjaFtUINa1p7cYmbdHt0AJKz3b_1eXOrvzVTJPES2gQ2K89HvYHxic2hbE6thEebca42ixsN-9OHHqO3brZdygBJjn6bOzPnuVm6nmBMR1Fl-cVJe_BmNmdsOGnzHWXthJzuHs3Cy3S7GqPz51ziFb-MmPQDdhmQNNCra6MebHB5nJ66EAsTIqcwbzKnyF0KjP2cd6pNOOv6Z1fWJHvVErKb1DHDiC4ysjnc6b1ACsdETQ0LKiOEmpfKog=w1200-h961-no?authuser=0" alt="Profile Generator">
+                                    <img class="image" src="https://freerangestock.com/thumbnail/55451/video-sharing-concept--uploading-videos-to-the-internet--shado.jpg" alt="Profile Generator">
                                 </div>
                                 <div class="shadow rounded feature-item p-4 mb-4 aos-init" data-aos="fade-up">
                                     <div class="my-4">
@@ -125,9 +125,8 @@
                                     </div>
                                     <h4>CodeQuiz</h4>
                                     <p>A simple browser coding quiz built with HTML, CSS, and Javascript
-
                                     </p>
-                                    <img class="image" src="https://lh3.googleusercontent.com/fyBqVwyWSoW96iY-_P3JL8V0Sldck23RWdF8LlwI7wjERrDfjhw2g7UVVzqcrKIw-m2eeaOtNJrTMBJ4N8C6pLWaUW_tLaJhgIFN7AzZRrKszhGYK1GH3ez_giSmAt2NoyIcy127DC1BKSYbiXx-bGWvlXmxOY09ZU9d9UE2T6aokVaUYwEWhIwbE2otuxp9faqmXFcshpIvB2PtKm6ewPIrl-GW4Ilaa6JtSJgaHHWMyambBZ9-qmAWT0bKsi683DObytjY-Dty8RiF07_AWRT0tTaRUZEfxpl0KFZPp1i54uaSO1ZbPU4Wsrl4oRpunM1ly6zj0gGxeKEDtyZEIs6KoVyBXfQUkWjakhLcW_4636ZKxT98UDDw6d7oCwlAab_ARYBz54iC6nibNqupdPv9wZF4HOBM8pn4t-nKaPeijoNjhJ3Ex-Vx-Sng-xzQzFSNBimh1sBifukI05w6xiAVdUy57OdIW8zbVO273QKW0t2UtFeh4M3Rw9nbxHFZ1hMvwUr5eaEBtGTFybakytydWA9DE-3pXETswAukBUbuH28tHeIdgisHzWu1KdWQZBbEz1ldQ9KdpqN4dV3AUrF9yEPy0T2_FlUfzlAkevfvd0lQyOIXdfSmyszfJ--j9sI3lmDESvrW_jafwOvb3C31oUb3dMAJKdeYWLjmIJT1XkHqvolzLXOC7S8pTsJemQqOIHKEbaGugpthmTTi1X0=w2217-h1290-no?authuser=0" alt="Test being taken">
+                                    <img class="image" src="https://images.pexels.com/photos/4050315/pexels-photo-4050315.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Test being taken">
                                 </div>
                             </div>
                             <!-- End of Feature Item -->
