Working on fixing contact form

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <h2 class="contact">Contact Me</h2><br>
             <h6 class="contact-des">Have questions or want to colaberate?</h6>
             <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name" data-nlok-ref-guid="34f0b71c-992a-4354-da9d-cb52cbd20659">
+                <input type="text" class="form-control" id="name" name="name" placeholder="Name">
             </div><br>
             <div class="col-md-12 form-group">
                 <input type="text" class="form-control" id="email" name="email" placeholder="Email">
